implements WorldCould function into our app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".WordcloudActivity"
+            android:name=".WordCloudActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +23,10 @@
                 <data android:mimeType="text/*" />
             </intent-filter>
             </activity>
+        <activity
+            android:name=".WordCloudOutput"
+            android:label="output">
+        </activity>
 
         <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     </application>
