--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.denryu.android.wordcloud">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/wordcloud"
@@ -11,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".WordcloudActivity"
+            android:name=".WordCloudActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -22,8 +25,6 @@
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/*" />
-                <!--<data android:mimeType="application/pdf" />-->
-                <!--<data android:mimeType="application/vnd.ms-xpsdocument"/>-->
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -32,10 +33,8 @@
             </intent-filter>
             </activity>
         <activity
-            android:name=".WordCloudOutput"
-            android:label="output">
+            android:name=".WordCloudOutputActivity"
+            android:label="Word Cloud">
         </activity>
-
-        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     </application>
 </manifest>
