--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
-    compile 'net.alhazmy13.wordcloud:library:0.2.0-beta'
     compile 'com.google.android.gms:play-services-identity:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
     testCompile 'junit:junit:4.12'
+    compile project(':WordCloud-HH')
 }
